Begin making a hopefully decent java 9 module compliant version, and start working on csv parser... again...