@@ -7,6 +7,15 @@ plugins {
     id 'maven-publish'
 }
 
+dependencies{
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.4.1'
+
+    implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.8.0-beta4'
+    testImplementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.3.0-alpha4'
+    testImplementation group: "com.fasterxml.jackson.dataformat", name: 'jackson-dataformat-csv', version: '2.9.0'
+
+}
+
 publishing {
     publications {
         maven(MavenPublication) {
@@ -19,35 +28,88 @@ publishing {
     }
 }
 
+ext.moduleName = 'com.squedgy.utilities'
+
 group 'com.squedgy'
 version '1.0'
 
-sourceCompatibility = 1.8
+sourceCompatibility = 1.11
+targetCompatibility = 1.11
 
 apply plugin: 'java'
 apply plugin: 'idea'
-
-jar{
-    baseName = 'my-utilities'
-    version = '0.0.1-SNAPSHOT'
-}
 
 repositories{
     mavenCentral()
 }
 
-test {
-    useJUnitPlatform()
-    testLogging {
-        events "passed", "skipped", "failed"
+def moduleExists = {
+    def check = moduleName
+    return check != null && check != ''
+}
+
+compileJava {
+    if(!moduleExists()) {
+        throw new IllegalArgumentException("Module Name is NOT declared in properties for " + project.name)
+    }
+    inputs.property("moduleName", moduleName)
+    doFirst {
+        options.compilerArgs = [
+                '--module-path', classpath.asPath,
+        ]
+        classpath = files()
     }
 }
 
-dependencies{
-    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.4.1'
+compileTestJava {
+    if(!moduleExists()) {
+        throw new IllegalArgumentException("Module Name is NOT declared in properties")
+    }
+    inputs.property('moduleName', moduleName)
+    doFirst {
+        options.compilerArgs = [
+                '--module-path' , classpath.asPath,
+                '--add-modules', 'org.junit.jupiter.api',
+                '--add-reads', "${moduleName}=org.junit.jupiter.api",
+                '--patch-module', "${moduleName}=" + files(sourceSets.test.java.srcDirs).asPath
+        ]
+        classpath = files()
+    }
+}
 
-    implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.26'
-    testImplementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
-    testImplementation group: "com.fasterxml.jackson.dataformat", name: 'jackson-dataformat-csv', version: '2.9.0'
+test {
+    useJUnitPlatform()
+    if(!moduleExists()) {
+        throw new IllegalArgumentException("Module Name is NOT declared in properties")
+    }
+    inputs.property("moduleName", moduleName)
+    testLogging {
+        events 'passed', 'skipped', 'failed'
+    }
+    doFirst {
+        jvmArgs = [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'ALL-MODULE-PATH',
+                '--add-reads', "$moduleName=org.junit.jupiter.api",
+                '--patch-module', "$moduleName=${files(sourceSets.test.java.outputDir).asPath}:${project.buildDir.toPath().resolve("resources").resolve("test").toAbsolutePath()}"
+        ]
+        classpath = files()
+    }
+}
 
+jar {
+    baseName = 'my-utilities'
+    version = '0.0.1-SNAPSHOT'
+    manifest.attributes(
+            provider: 'gradle',
+            'Automatic-Module-Name': moduleName
+    )
+
+    baseName = project.name + '-mmm'
+    version = version
+    from {
+        configurations.runtimeClasspath.collect {
+            it.isDirectory() ? it : zipTree(it)
+        }
+    }
 }
